app_server: turn DPMS on only after setting a valid mode

It's not allowed to enable the screen before having set a mode. At least
in the case of the intel_extreme driver, this creates some problem. Move
the call just a bit later in the init process, where the mode is already
set.

Fixes #17163.

Change-Id: Iaa665f0edc15316890032f1a5928f33634dc8749
Reviewed-on: https://review.haiku-os.org/c/haiku/+/4362
Reviewed-by: Adrien Destugues <pulkomandy@gmail.com>
Reviewed-by: François Revol <revol@free.fr>
Reviewed-by: <BeagleJoe13@gmail.com>
(cherry picked from commit 1c88f77dccc78e8a59d74f767cfc28d69bc52f2c)
Reviewed-on: https://review.haiku-os.org/c/haiku/+/4338